[gd_scene load_steps=7 format=3 uid="uid://0yoge5uhrx6a"]

[ext_resource type="Texture2D" uid="uid://cbbwsq06liip4" path="res://assets/heart.png" id="1_sguym"]
[ext_resource type="Script" uid="uid://cqt40geql7c68" path="res://scripts/health_pack.gd" id="1_x1beo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sguym"]
radius = 11.0

[sub_resource type="SystemFont" id="SystemFont_sguym"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="Gradient" id="Gradient_x1beo"]
offsets = PackedFloat32Array(0.00649351, 0.805195, 0.948052)
colors = PackedColorArray(1, 1, 1, 1, 0.0555555, 0.0555555, 0.0555555, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2qt1k"]
gradient = SubResource("Gradient_x1beo")
fill = 1
fill_from = Vector2(0.481651, 0.449541)

[node name="healthPack" type="Area2D"]
script = ExtResource("1_x1beo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sguym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sguym")

[node name="holdToHeal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -18.0
offset_top = -39.0
offset_right = 22.0
offset_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="holdToHeal"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = 8.0
offset_right = 25.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="holdToHeal/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="holdToHeal/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_sguym")
theme_override_font_sizes/font_size = 7
text = "HOLD TO HEAL"

[node name="ProgressBar" type="ProgressBar" parent="holdToHeal/MarginContainer/VBoxContainer"]
layout_mode = 2
show_percentage = false

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.816667, 0, 1)
energy = 0.24
texture = SubResource("GradientTexture2D_2qt1k")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
